# actor-framework

./: .gitignore  CMakeLists.txt  cuda_control_layer_walkthrough.md  findings.md  intrusive_pointer_report.md  plan.md  report.md
kyles-tests/archive/: main.cpp  (+1 more)
libcaf_cuda/: CMakeLists.txt  documentation.txt  overhead.md
libcaf_cuda/caf/actorBLAS/: actorBLAS.hpp
libcaf_cuda/caf/actorBLAS/axpy-actor/: axpy-actor.hpp
libcaf_cuda/caf/actorBLAS/batched-gemm-actor/: batched-gemm-actor.hpp
libcaf_cuda/caf/actorBLAS/copy-actor/: copy-actor.hpp
libcaf_cuda/caf/actorBLAS/dot-actor/: dot-actor.hpp
libcaf_cuda/caf/actorBLAS/gemm-actor/: gemm-actor.hpp
libcaf_cuda/caf/actorBLAS/gemv-actor/: gemv-actor.hpp
libcaf_cuda/caf/actorBLAS/matrix-vector-actor/: gemv-actor.hpp
libcaf_cuda/caf/actorBLAS/nrm2-actor/: nrm2-actor.hpp
libcaf_cuda/caf/actorBLAS/syrk-actor/: syrk-actor.hpp
libcaf_cuda/caf/actorSOLVE/: actorSOLVE.hpp
libcaf_cuda/caf/actorSPARSE/: actorSPARSE.hpp
libcaf_cuda/caf/actorSPARSE/spmm-actor/: spmm-actor.hpp
libcaf_cuda/caf/actorSPARSE/spmv-actor/: spmv-actor.hpp
libcaf_cuda/caf/component-actors/: all-component-actors.hpp
libcaf_cuda/caf/component-actors/mem_transfer_actor/: mem_transfer_actor.hpp
libcaf_cuda/caf/component-actors/mmul_actor/: mmul_actor.hpp
libcaf_cuda/caf/component-actors/mmul_actor_not_square/: double_mmul_non_square.cu  float_mmul_non_square.cu  int_mmul_non_square.cu  mmul_actor_not_square.hpp
libcaf_cuda/caf/component-actors/rotation_actor/: rotation_actor.hpp
libcaf_cuda/caf/component-actors/sync_actor/: sync_actor.hpp
libcaf_cuda/caf/component-actors/vector_add_actor/: vector_add.cu  vector_add_actor.hpp
libcaf_cuda/caf/cuda/: actor_facade.hpp  actor_facade_event.hpp  actor_system_extension.hpp  all.hpp  command.hpp  command_runner.hpp  device.hpp  event.hpp  global.hpp  global_export.hpp  helpers.hpp  manager.hpp  manager_config.hpp  mem_ref.hpp  memory_command.hpp  middleman.hpp  nd_range.hpp  platform.hpp  program.hpp  scheduler.hpp  streampool.hpp  types.hpp
libcaf_cuda/caf/cuda/control-layer/: all-control-layer.hpp  behavior.hpp  behavior_table.hpp  behavior_token.hpp  core_usage_behavior.hpp  green_light_behavior.hpp  kernel_graph.hpp  launch_response_token.hpp  launch_token.hpp  memory_response_token.hpp  memory_transfer_token.hpp  mmul_batch_scheduler_behavior.hpp  multilevel_usage_behavior.hpp  pressure_scheduler.hpp  red_light_behavior.hpp  request_token.hpp  response_token.hpp  scheduler_actor.hpp  scheduler_actor_state.hpp  single_usage_behavior.hpp  token.hpp  token_factory.hpp  transfer_token.hpp
libcaf_cuda/caf/detail/: spawn_helper.hpp
libcaf_cuda/examples/actor-facade-example/: CMakeLists.txt  mmul.example.cpp
libcaf_cuda/examples/custom-actor-examples/: CMakeLists.txt  mmul.example.cpp
libcaf_cuda/sc26/: test_analysis.md
libcaf_cuda/sc26/Batched-Matrix-Multiply/: CMakeLists.txt  main.test.cpp
libcaf_cuda/sc26/Fault-Tolerance/: Makefile  main.cpp  monte_carlo.cu
libcaf_cuda/sc26/Fault-Tolerance-2/: CMakeLists.txt  main.test.cpp
libcaf_cuda/sc26/Irregular-Workload/workloadA/: CMakeLists.txt  atoms.hpp  jacobi_kernels.cu  main.native.cpp  main.native_sorted.cpp  main.test.cpp  sparse_utils.hpp  supervisor_actor.hpp
libcaf_cuda/sc26/Irregular-Workload/workloadB/: CMakeLists.txt  main.native.cpp  main.native_sorted.cpp  main.test.cpp
libcaf_cuda/sc26/Runtime-Overhead/: Makefile  actor_facade.cpp  command_runner.cpp  cuda_native.cpp
libcaf_cuda/sc26/Sequence-Independent-Tasks/: Makefile  actor_facade.cpp  command_runner.cpp  cuda_native.cpp
libcaf_cuda/sc26/benchmarks/: run_runtime_overhead.py  run_sequence_independent.py
libcaf_cuda/sc26/runtime-overhead-comparison/: Makefile  command-runner.txt  cuda-native.txt  main_actor_command_runner.cpp  main_actor_facade.cpp  main_actors.cpp  main_cuda_native.cpp  review.md
libcaf_cuda/sc26/runtime-overhead-comparison-option-a/: compile.sh  main_actor_command_runner.cpp  main_actor_facade.cpp  main_cuda_native.cpp  mmul.cu
libcaf_cuda/sc26/runtime-overhead-comparison-option-b/: Makefile  main_actor_command_runner.cpp  main_actor_facade.cpp  main_cuda_native.cpp
libcaf_cuda/sc26/scripts/Batched-Matrix-Multiply/: plot.py
libcaf_cuda/sc26/sequence-of-independent-tasks/: Makefile  main_actor_facade.cpp  main_actors.cpp  main_command_runner.cpp  main_cuda_native.cpp
libcaf_cuda/sc26/sequence-of-independent-tasks-option-a/: Makefile  main_actor_facade.cpp  main_command_runner.cpp  main_cuda_native.cpp  mmul.cu
libcaf_cuda/sc26/sequence-of-independent-tasks-option-b/: main_actor_facade.cpp  main_command_runner.cpp  main_cuda_native.cpp
libcaf_cuda/src/: device.cpp  helpers.cpp  manager.cpp  middleman.cpp  platform.cpp  program.cpp  scheduler.cpp  streampool.cpp  test.cpp
libcaf_cuda/src/control-layer/: behavior.cpp  behavior_table.cpp  core_usage_behavior.cpp  green_light_behavior.cpp  mmul_batch_scheduler_behavior.cpp  multilevel_usage_behavior.cpp  pressure_scheduler.cpp  red_light_behavior.cpp  red_light_green_light.cpp  scheduler_actor.cpp  single_usage_behavior.cpp  token_factory.cpp
libcaf_cuda/tests/actor-facade-test/: CMakeLists.txt  latency_bench.test.cpp  main.test.cpp  throughput_bench.test.cpp  throughput_mapping_bench.test.cpp
libcaf_cuda/tests/control-layer-unit-tests/: main.test.cpp  mmul.cubin
libcaf_cuda/tests/custom-actors-test/: main.test.cpp
libcaf_cuda/tests/fault-tolerance-workload-test/: CMakeLists.txt  ft_cg_actor.hpp  main.native.cpp  main.native_sorted.cpp  main.test.cpp  native_utils.cpp  native_utils.cu  native_utils.hpp  sparse_utils.cpp  supervisor_actor.hpp
libcaf_cuda/tests/inspect-test/: main.test.cpp
libcaf_cuda/tests/kyles-tests/: roadmap_claude.md  roadmap_gemini.md
libcaf_cuda/tests/scheduler-fault-tolerance-test/: CMakeLists.txt  compile_kernels.sh  main.native.cpp  scheduler_integration_test.cpp
libcaf_cuda/tests/unit-test/: main.test.cpp
libcaf_cuda/tests/workload-test/: CMakeLists.txt  hot-potatoe.cpp  main.native.cpp  main.test.cpp  sparse_utils.cpp  sparse_utils.hpp
(+140 files in other folders)
